--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
         "eslint": "8.44.0",
         "eslint-config-next": "13.4.9",
         "fabric": "^5.3.0",
+        "flexlayout-react": "^0.8.1",
         "mobx": "^6.9.0",
         "mobx-react": "^7.6.0",
         "next": "13.4.9",
         "postcss": "8.4.25",
+        "prismjs": "^1.29.0",
         "react": "18.2.0",
         "react-color": "^2.19.3",
         "react-dom": "18.2.0",
