--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
         "react-dom": "18.2.0",
         "react-icons": "^4.10.1",
         "tailwindcss": "3.3.2",
-        "typescript": "5.1.6"
+        "typescript": "5.1.6",
+        "utf-8-validate": "^6.0.5"
     },
     "devDependencies": {
         "@types/animejs": "^3.1.7",
-        "@types/react-color": "^3.0.6"
+        "@types/react-color": "^3.0.6",
+        "eslint-plugin-react": "^7.37.2"
     }
 }
